Add changes to AK lab7

--- a/ak/labs/lab7/AK_lab_7_assembler/AK_lab_7_assembler.vcxproj.filters
+++ b/ak/labs/lab7/AK_lab_7_assembler/AK_lab_7_assembler.vcxproj.filters
@@ -15,8 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <None Include="lab7.asm">
+    <MASM Include="AK_lab_7_assembler.asm">
       <Filter>Source Files</Filter>
-    </None>
+    </MASM>
   </ItemGroup>
 </Project>
