--- a/ak/labs/lab8/AK_lab_8/AK_lab_8.vcxproj.filters
+++ b/ak/labs/lab8/AK_lab_8/AK_lab_8.vcxproj.filters
@@ -15,7 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <MASM Include="AK_lab8_source.asm">
+    <Text Include="Source.txt">
+      <Filter>Source Files</Filter>
+    </Text>
+  </ItemGroup>
+  <ItemGroup>
+    <MASM Include="AK_lab_8.asm">
       <Filter>Source Files</Filter>
     </MASM>
   </ItemGroup>
