--- a/ak/labs/lab8/AK_lab8_c_source/AK_lab8_c_source.vcxproj
+++ b/ak/labs/lab8/AK_lab8_c_source/AK_lab8_c_source.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source.c" />
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
