--- a/ak/labs/lab8/AK_lab8_c_source/AK_lab8_c_source.vcxproj.filters
+++ b/ak/labs/lab8/AK_lab8_c_source/AK_lab8_c_source.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Source.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
