--- a/ak/labs/lab8/AK_lab_8/AK_lab_8.vcxproj
+++ b/ak/labs/lab8/AK_lab_8/AK_lab_8.vcxproj
@@ -140,7 +140,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <Text Include="lab9.txt" />
     <Text Include="Source.txt" />
+    <Text Include="tracker_needed.txt" />
   </ItemGroup>
   <ItemGroup>
     <MASM Include="AK_lab_8.asm" />
