--- a/ak/labs/lab8/AK_lab_8/AK_lab_8.vcxproj.filters
+++ b/ak/labs/lab8/AK_lab_8/AK_lab_8.vcxproj.filters
@@ -18,6 +18,12 @@
     <Text Include="Source.txt">
       <Filter>Source Files</Filter>
     </Text>
+    <Text Include="lab9.txt">
+      <Filter>Source Files</Filter>
+    </Text>
+    <Text Include="tracker_needed.txt">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <MASM Include="AK_lab_8.asm">
