Update AK lab 9 in lab8

--- a/ak/labs/lab8/AK_lab_8/AK_lab_8.vcxproj
+++ b/ak/labs/lab8/AK_lab_8/AK_lab_8.vcxproj
@@ -141,6 +141,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <Text Include="lab9.txt" />
+    <Text Include="lab9_2.txt" />
     <Text Include="Source.txt" />
     <Text Include="tracker_needed.txt" />
   </ItemGroup>
