--- a/ak/labs/lab8/AK_lab_8/AK_lab_8.vcxproj.filters
+++ b/ak/labs/lab8/AK_lab_8/AK_lab_8.vcxproj.filters
@@ -24,6 +24,9 @@
     <Text Include="tracker_needed.txt">
       <Filter>Source Files</Filter>
     </Text>
+    <Text Include="lab9_2.txt">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <MASM Include="AK_lab_8.asm">
