--- a/os/labs/lab9/OS_lab9/OS_lab9.vcxproj
+++ b/os/labs/lab9/OS_lab9/OS_lab9.vcxproj
@@ -88,12 +88,12 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>lab9_stl\StaticLib1;lab9_dll\OS_dll_1;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>lab9_stl\StaticLib1;..\lab9_dll\OS_dll_1;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>lab9_stl\StaticLib1\$(IntDir);lab9_dll\OS_dll_1\$(IntDir)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>lab9_stl\StaticLib1\$(IntDir);..\lab9_dll\OS_dll_1\$(IntDir)</AdditionalLibraryDirectories>
       <AdditionalDependencies>OS_dll_1.lib;StaticLib1.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
@@ -101,7 +101,7 @@
       </Command>
     </PreBuildEvent>
     <PostBuildEvent>
-      <Command>xcopy /y /d "lab9_dll\OS_dll_1\$(IntDir)OS_dll_1.dll" "$(OutDir)"</Command>
+      <Command>xcopy /y /d "..\lab9_dll\OS_dll_1\$(IntDir)OS_dll_1.dll" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -112,7 +112,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>lab9_stl\StaticLib1;lab9_dll\OS_dll_1;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>lab9_stl\StaticLib1;..\lab9_dll\OS_dll_1;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -120,10 +120,10 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>OS_dll_1.lib;StaticLib1.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>lab9_stl\StaticLib1\$(IntDir);lab9_dll\OS_dll_1\$(IntDir)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>lab9_stl\StaticLib1\$(IntDir);..\lab9_dll\OS_dll_1\$(IntDir)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /y /d "lab9_dll\OS_dll_1\$(IntDir)OS_dll_1.dll" "$(OutDir)"</Command>
+      <Command>xcopy /y /d "..\lab9_dll\OS_dll_1\$(IntDir)OS_dll_1.dll" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -132,17 +132,17 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>lab9_stl\StaticLib1;lab9_dll\OS_dll_1;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>lab9_stl\StaticLib1;..\lab9_dll\OS_dll_1;</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>OS_dll_1.lib;StaticLib1.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>lab9_dll\StaticLib1\x64\$(IntDir);lab9_dll\OS_dll_1\x64\$(IntDir)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>lab9_stl\StaticLib1\$(IntDir);..\lab9_dll\OS_dll_1\$(IntDir)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /y /d "lab9_dll\OS_dll_1\x64\$(IntDir)OS_dll_1.dll" "$(OutDir)"</Command>
+      <Command>xcopy /y /d "..\lab9_dll\OS_dll_1\$(IntDir)OS_dll_1.dll" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -153,7 +153,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>lab9_stl\StaticLib1;lab9_dll\OS_dll_1;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>lab9_stl\StaticLib1;..\lab9_dll\OS_dll_1;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -161,10 +161,10 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>OS_dll_1.lib;StaticLib1.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>lab9_dll\StaticLib1\x64\$(IntDir);lab9_dll\OS_dll_1\x64\$(IntDir)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>lab9_stl\StaticLib1\$(IntDir);..\lab9_dll\OS_dll_1\$(IntDir)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /y /d "lab9_dll\OS_dll_1\x64\$(IntDir)OS_dll_1.dll" "$(OutDir)"</Command>
+      <Command>xcopy /y /d "..\lab9_dll\OS_dll_1\$(IntDir)OS_dll_1.dll" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
