--- a/ak/labs/lab9/AK_lab9/AK_lab9.vcxproj
+++ b/ak/labs/lab9/AK_lab9/AK_lab9.vcxproj
@@ -93,11 +93,11 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Irvine\irvine</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\Irvine\irvine</AdditionalLibraryDirectories>
       <AdditionalDependencies>Irvine32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <MASM>
-      <IncludePaths>C:\Irvine\irvine</IncludePaths>
+      <IncludePaths>..\Irvine\irvine</IncludePaths>
     </MASM>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
