--- a/DO/lab1/source/DO_lab1/DO_lab1.vcxproj.filters
+++ b/DO/lab1/source/DO_lab1/DO_lab1.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="EquationSign.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="EquationType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
