--- a/DO/lab1/source/DO_lab1/DO_lab1.vcxproj.filters
+++ b/DO/lab1/source/DO_lab1/DO_lab1.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Equation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h">
