--- a/DO/lab4/source/DO_lab4/DO_lab4.vcxproj
+++ b/DO/lab4/source/DO_lab4/DO_lab4.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="TransportProblem.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Cell.h" />
     <ClInclude Include="TransportProblem.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
