--- a/DO/lab4/source/DO_lab4/DO_lab4.vcxproj.filters
+++ b/DO/lab4/source/DO_lab4/DO_lab4.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="TransportProblem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Cell.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
