--- a/DO/lab4/source/DO_lab4/DO_lab4.vcxproj.filters
+++ b/DO/lab4/source/DO_lab4/DO_lab4.vcxproj.filters
@@ -29,5 +29,11 @@
     <ClInclude Include="Cell.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Potential.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LoopCellInfo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
