--- a/DO/lab4/source/DO_lab4/DO_lab4.vcxproj.filters
+++ b/DO/lab4/source/DO_lab4/DO_lab4.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="TransportProblem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RouteOptimization.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TransportProblem.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="LoopCellInfo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RouteOptimization.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
