--- a/DO/lab4/source/DO_lab4/DO_lab4.vcxproj.filters
+++ b/DO/lab4/source/DO_lab4/DO_lab4.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="Vertex.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Connection.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
