--- a/DO/lab1/source/DO_lab1/DO_lab1.vcxproj.filters
+++ b/DO/lab1/source/DO_lab1/DO_lab1.vcxproj.filters
@@ -27,11 +27,11 @@
     <ClCompile Include="Source1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HybridGame.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="header.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="SyntexSolver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -42,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="EquationType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HybridGame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
