--- a/MAPZ/lab4/MAPZ_lab4/MAPZ_lab4.csproj
+++ b/MAPZ/lab4/MAPZ_lab4/MAPZ_lab4.csproj
@@ -54,12 +54,15 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GameFacade.cs" />
     <Compile Include="IEmployer.cs" />
     <Compile Include="MainMenu.cs" />
     <Compile Include="PauseMenu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Swindler.cs" />
+    <Compile Include="SwindlerMessageDecorator.cs" />
+    <Compile Include="Table.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
