--- a/MAPZ/lab4/MAPZ_lab4/MAPZ_lab4.csproj
+++ b/MAPZ/lab4/MAPZ_lab4/MAPZ_lab4.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Building.cs" />
     <Compile Include="Casino.cs" />
+    <Compile Include="ComplexityStrategy.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -57,9 +58,11 @@
     <Compile Include="GameFacade.cs" />
     <Compile Include="IEmployer.cs" />
     <Compile Include="MainMenu.cs" />
+    <Compile Include="Observer.cs" />
     <Compile Include="PauseMenu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="State.cs" />
     <Compile Include="Swindler.cs" />
     <Compile Include="SwindlerMessageDecorator.cs" />
     <Compile Include="Table.cs" />
